--- a/Learning Javascript/index.html
+++ b/Learning Javascript/index.html
@@ -7,9 +7,24 @@
 </head>
 
 <body>
+    <h1 id="firstText">Text 1</h1>
+    <button onclick="changeColor('red','firstText')">Change Red</button>
+    <button onclick="changeColor('yellow','firstText')">Change Yellow</button>
+    <button onclick="changeColor('green','firstText')">Change Green</button>
+
+    <h1 id="secondText">Text 2</h1>
+    <button onclick="changeColor('red','secondText')">Change Red</button>
+    <button onclick="changeColor('yellow','secondText')">Change Yellow</button>
+    <button onclick="changeColor('green','secondText')">Change Green</button>
+
     <h1 id='change'> element to be changed </h1>
-    <img id='testimg' src="https://miro.medium.com/max/880/0*H3jZONKqRuAAeHnG.jpg"/>
-    
+    <img id='testimg' src="https://miro.medium.com/max/880/0*H3jZONKqRuAAeHnG.jpg" width="200" height="200" />
+
+    <div>
+        <button onclick="addElement()">Add Element</button>
+        <button onclick="modifyContent()">Modify Content</button>
+        <button onclick="changeAttribute()">Change Attribute</button>
+    </div>
 </body>
     <script src="Script1.js" type="text/javascript"></script>
 </html>
